# dgot

./: README.md  pyproject.toml
.github/workflows/: publish.yml
dgot/: __init__.py  client.py  compiler.py  encoder.py  extractor.py  gnn.py  graph.py  optimizer.py  pipeline.py  pyproject.toml
