[build-system] 
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 

[project] 
name = "dgot" 
version = "0.1.1" 
description = "Differentiable Graph-of-Thought reasoning — provider-agnostic LLM reasoning graphs" 
readme = "README.md" 
license = { text = "MIT" } 
requires-python = ">=3.9" 
dependencies = [] 

[tool.setuptools.packages.find] 
where = ["."] 
include = ["dgot*"] 
