[build-system] 
requires = ["setuptools>=68", "wheel"] 
build-backend = "setuptools.backends.legacy:build" 

[project] 
name = "dgot" 
version = "0.1.0" 
description = "Differentiable Graph-of-Thought reasoning — provider-agnostic LLM reasoning graphs" 
readme = "README.md" 
license = { text = "MIT" } 
requires-python = ">=3.9" 
keywords = [ 
 "llm", "reasoning", "graph-of-thought", "chain-of-thought", 
 "graph-neural-network", "ai", "nlp", 
] 
classifiers = [ 
 "Development Status :: 3 - Alpha", 
 "Intended Audience :: Science/Research", 
 "Intended Audience :: Developers", 
 "License :: OSI Approved :: MIT License", 
 "Programming Language :: Python :: 3", 
 "Programming Language :: Python :: 3.9", 
 "Programming Language :: Python :: 3.10", 
 "Programming Language :: Python :: 3.11", 
 "Programming Language :: Python :: 3.12", 
 "Topic :: Scientific/Engineering :: Artificial Intelligence", 
] 

# Zero mandatory dependencies — stdlib only. 
# Optional extras listed below. 
dependencies = [] 

[project.optional-dependencies] 
# Use numpy for faster matrix ops instead of pure-Python fallbacks 
numpy = ["numpy>=1.24"] 
# Use torch for true autograd / GPU-accelerated GNN 
torch = ["torch>=2.0"] 
# Full research stack 
research = ["numpy>=1.24", "torch>=2.0", "networkx>=3.0", "matplotlib>=3.7"] 
# Development / testing 
dev = [ 
 "pytest>=7.4", 
 "pytest-cov>=4.1", 
 "ruff>=0.1", 
 "mypy>=1.5", 
 "build", 
 "twine", 
] 

[project.urls] 
Homepage = "https://github.com/dcsgod/dgot" 
Documentation = "https://dgot.readthedocs.io" 
Repository = "https://github.com/dcsgod/dgot.git" 
Issues = "https://github.com/dcsgod/dgot/issues" 

[tool.setuptools.packages.find] 
where = ["."] 
include = ["dgot*"] 
exclude = ["tests*", "*.egg-info"] 

[tool.pytest.ini_options] 
testpaths = ["tests"] 
addopts = "-v --tb=short" 

[tool.ruff] 
line-length = 100 
target-version = "py39" 

[tool.mypy] 
python_version = "3.9" 
ignore_missing_imports = true
